--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- INTESTAZIONE HEADER  -->
     <header>
-        <div class="container-fluid header-color">
-            <div>
-                <div class="head-text">
-                    <div class="capital">Start Bootstrap</div>
-                    <div class="right-head-text">
-                        <ol class="nav">
-                            <li><a href="#">Portfolio</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Contact</a></li> 
+        <div class="container-fluid bg-dark">
+            <div class="container-sm">
+                <div class="d-flex justify-content-between text-light">
+                    <div class="text-uppercase">Start Bootstrap</div>
+                    <div class="d-flex justify-content-end">
+                        <ol class="list-unstyled d-flex justify-content-end">
+                            <li><a class="text-light text-decoration-none d-none d-lg-block" href="#">Portfolio</a></li>
+                            <li><a class="text-light text-decoration-none px-4 d-none d-lg-block" href="#">About</a></li>
+                            <li><a class="text-light text-decoration-none d-none d-lg-block" href="#">Contact</a></li> 
                         </ol>
-                        <div><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                        <div class="ps-4"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                         </svg>
                         </div>
@@ -30,15 +31,65 @@
         </div>
     </header>
     <main>
-        <div class="container-fluid first-block">
-            <img id="avatar" src="img/avatar.svg" alt="">
-            <div class="capital">Start Bootstrap</div>
-            <div class="star">
-                
-                <div>ciao</div>
-                <
+        <!-- FIRST BLOCK  -->
+        <div class="container-fluid bg-info">
+            <div class="container-sm first block">
+                <!-- Immagine  -->
+                <img id="avatar" src="img/avatar.svg" alt="">
+                <!-- Testo immagine  -->
+                <div class="text-uppercase">Start Bootstrap</div>
+                <!-- -----STELLA---- -->
+                <div class="star">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
+                      </svg>
+                    <div><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                        <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                      </svg></div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
+                      </svg>
+                </div>
+                <!-- DESCRIZIONE -->
+                <div class="text-uppercase"> Graphic Artist - Web Designer - Illustrator</div>
             </div>
-            <div class="capital"> Graphic Artist - Web Designer - Illustrator</div>
+        </div>
+        <!-- SECOND BLOCK  -->
+        <div class="container-sm second block">
+
+            <!-- -----STELLA---- -->
+            <div class="text-uppercase">Portfolio</div>
+            <div class="star">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
+                  </svg>
+                <div><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                  </svg></div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
+                  </svg>
+            </div>
+            <div class="img-container">
+                <div class="img-only">
+                    <img src="img/cabin.png" alt="...">
+                </div>
+                <div class="img-only central-img">
+                    <img src="img/cake.png" alt="...">
+                </div>
+                <div class="img-only">
+                    <img src="img/circus.png" alt="...">
+                </div>
+                <div class="img-only">
+                    <img src="img/game.png" alt="...">
+                </div>
+                <div class="img-only central-img">
+                    <img src="img/safe.png" alt="...">
+                </div>
+                <div class="img-only">
+                    <img src="img/submarine.png" alt="...">
+                </div>
+            </div>
         </div>
 
     </main>
