--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <main>
         <!-- FIRST BLOCK  -->
         <div class="container-fluid bg-info">
-            <div class="container-sm first block">
+            <div class="container-sm d-flex align-items-center flex-column mb-3 text-light fw-bold">
                 <!-- Immagine  -->
                 <img id="avatar" src="img/avatar.svg" alt="">
                 <!-- Testo immagine  -->
                 <div class="text-uppercase">Start Bootstrap</div>
                 <!-- -----STELLA---- -->
-                <div class="star">
+                <div class="d-flex justify-content-end">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
                       </svg>
@@ -59,7 +59,7 @@
 
             <!-- -----STELLA---- -->
             <div class="text-uppercase">Portfolio</div>
-            <div class="star">
+            <div class="d-flex align-items-end">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
                   </svg>
