--- a/index.html
+++ b/index.html
@@ -132,15 +132,24 @@
         </div>
 
     </main>
+    <!-- FOOTER SECTION -->
     <footer>
         <div class="container-fluid bg-secondary">
-            <div class="pt-3 container-sm d-flex align-items-center flex-column mb-3 text-light fw-bold">
-                <div class="text-uppercase">location</div>
-                <div>2215 John Daniel Drive Clark, MO</div>
-                <div>54243</div>
-                <div class="text-uppercase">around the world</div>
-                <div class="text-uppercase">about freelancer</div>
-                <div>Freelance is a free to use, open source Bootstrap theme created by<div>Start Boostrap</div>.</div>
+            <div class="pt-3 container-sm d-flex align-items-center flex-column text-light">
+                <div class="pt-3 d-flex align-items-center flex-column">
+                    <div class="text-uppercase">location</div>
+                    <div>2215 John Daniel Drive Clark, MO</div>
+                    <div>54243</div>
+                </div>
+                <div class="pt-3 d-flex align-items-center flex-column">
+                    <div class="text-uppercase">around the web</div>
+                </div>
+                <div class="pt-3 d-flex align-items-center flex-column">
+                    <div class="text-uppercase">about freelancer</div>
+                    <div>
+                        Freelance is a free to use, open source Bootstrap theme created by <span>Start Boostrap</span>.
+                    </div>
+                </div>
             </div>
         </div>     
         <div class="container-fluid bg-secondary">
