--- a/index.html
+++ b/index.html
@@ -11,22 +11,20 @@
 <body>
     <!-- INTESTAZIONE HEADER  -->
     <header>
-        <div class="container-fluid bg-dark">
-            <div class="container-sm">
-                <div class="d-flex justify-content-between text-light">
+        <div class="container-fluid backcol">
+                <div class="container-sm d-flex justify-content-between align-items-center text-light">
                     <div class="text-uppercase">Start Bootstrap</div>
-                    <div class="d-flex justify-content-end">
+                    <div class="d-flex justify-content-end align-items-center">
                         <ol class="list-unstyled d-flex justify-content-end">
-                            <li><a class="text-light text-decoration-none d-none d-lg-block" href="#">Portfolio</a></li>
-                            <li><a class="text-light text-decoration-none px-4 d-none d-lg-block" href="#">About</a></li>
-                            <li><a class="text-light text-decoration-none d-none d-lg-block" href="#">Contact</a></li> 
+                            <li><a class="pt-3 text-light text-decoration-none d-none d-lg-block" href="#">Portfolio</a></li>
+                            <li><a class="pt-3 text-light text-decoration-none px-4 d-none d-lg-block" href="#">About</a></li>
+                            <li><a class="pt-3 text-light text-decoration-none d-none d-lg-block" href="#">Contact</a></li> 
                         </ol>
                         <div class="ps-4"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                         </svg>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
     </header>
@@ -37,21 +35,21 @@
                 <!-- Immagine  -->
                 <img id="avatar" src="img/avatar.svg" alt="">
                 <!-- Testo immagine  -->
-                <div class="text-uppercase pt-2">Start Bootstrap</div>
+                <div class="text-uppercase fs-1 text">Start Bootstrap</div>
                 <!-- -----STELLA---- -->
-                <div class="d-flex justify-content- pt-2">
+                <div class="d-flex align-items-center mb-3">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
-                      </svg>
+                      <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
+                    </svg>
                     <div><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
-                        <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                      </svg></div>
+                      <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                    </svg></div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
-                      </svg>
+                      <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
+                    </svg>
                 </div>
                 <!-- DESCRIZIONE -->
-                <div class="pt-2 pb-2 text-uppercase">
+                <div class="bp-2 text-uppercase size">
                      <div>Graphic Artist - Web Designer - Illustrator</div>
                 </div>
             </div>
@@ -60,7 +58,7 @@
         <div class="container-sm d-flex align-items-center flex-column mb-3 fw-bold">
 
             <!-- -----STELLA---- -->
-            <div class="text-uppercase">Portfolio</div>
+            <div class="text-uppercase fs-1 text">Portfolio</div>
             <div class="d-flex align-items-end mb-3">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
@@ -97,7 +95,7 @@
         <!-- ABOUT  -->
         <div class="container-fluid bg-info">
             <div class="pt-3 container-sm d-flex align-items-center flex-column mb-3 text-light fw-bold">
-                <div class="text-uppercase">About</div>
+                <div class="text-uppercase fs-1 text">About</div>
                 <div class="d-flex align-items-end mb-3">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
@@ -109,15 +107,16 @@
                     <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
                   </svg>
                 </div>
-                <div class="d-md-flex justify-content-between pb-2 text-start">
-                    <p class="pt-2">Freelancer is a free boostrap them created by Start Bootstrap.The download includes the complete source files including HTML, CSS,and Javascript as well as optional LESS styleesheets for east customization.</p>
-                    <p class="pt-2">Wheter you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to shar your projects, this template is the perfect starting point!</p>
+                <div class="d-md-flex justify-content-center pb-2">
+                    <p class="pt-2 parted">Freelancer is a free boostrap them created by Start Bootstrap.The download includes the complete source files including HTML, CSS,and Javascript as well as optional LESS styleesheets for east customization.</p>
+                    <p class="pt-2 parted">Wheter you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to shar your projects, this template is the perfect starting point!</p>
                 </div>
             </div>
         </div>
         <!-- CONTACT SECTION  -->
         <div class="pt-3 container-sm d-flex align-items-center flex-column mb-3 fw-bold">
-            <div class="text-uppercase">Contact me</div>
+            <div class="text-uppercase fs-1 text">Contact me </div>
+            <!-- STELLA  -->
             <div class="d-flex align-items-end mb-3">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
@@ -134,26 +133,48 @@
     </main>
     <!-- FOOTER SECTION -->
     <footer>
-        <div class="container-fluid bg-secondary">
-            <div class="pt-3 container-sm d-flex align-items-center flex-column text-light">
-                <div class="pt-3 d-flex align-items-center flex-column">
+        <div class="container-fluid backcol">
+            <div class="pt-3 pb-3 text-center container-sm d-flex align-items-center flex-column text-light flex-md-row align-items-md-start">
+                <div class="block pt-3 d-flex align-items-center flex-column">
                     <div class="text-uppercase">location</div>
                     <div>2215 John Daniel Drive Clark, MO</div>
                     <div>54243</div>
                 </div>
-                <div class="pt-3 d-flex align-items-center flex-column">
+                <div class=" block pt-3 d-flex align-items-center flex-column">
                     <div class="text-uppercase">around the web</div>
+                    <div class="d-flex align-content-end justify-content-between">
+                        <div class="px-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+                          </svg>
+                        </div>
+                        <div class="pe-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-google" viewBox="0 0 16 16">
+                                <path d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"/>
+                              </svg>
+                        </div> 
+                        <div class="pe-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+                                <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
+                              </svg>
+                        </div>
+                        <div class="pe-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                                <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+                              </svg>
+                        </div>
+                    </div>
                 </div>
-                <div class="pt-3 d-flex align-items-center flex-column">
+                <div class="block lpb-3 pt-3 d-flex align-items-center flex-column text-center">
                     <div class="text-uppercase">about freelancer</div>
                     <div>
-                        Freelance is a free to use, open source Bootstrap theme created by <span>Start Boostrap</span>.
+                        Freelance is a free to use, open source Bootstrap theme created by <span class="text-success text-center">Start Boostrap</span>.
                     </div>
                 </div>
             </div>
         </div>     
         <div class="container-fluid bg-secondary">
-            <div class="pt-3 container-sm d-flex align-items-center flex-column mb-3 text-light fw-bold">
+            <div class="pt-3 pb-3 container-sm d-flex align-items-center flex-column mb-3 text-light fw-bold">
                 <div>Copyright @ Your Website 2019</div>
             </div>
         </div>     
