--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <!-- INTESTAZIONE HEADER  -->
     <header>
-        <div class="container-fluid backcol">
-                <div class="container-sm d-flex justify-content-between align-items-center text-light">
-                    <div class="text-uppercase">Start Bootstrap</div>
+        <div class="container-fluid backcol head-size">
+                <div class="py-1 container-sm d-flex justify-content-between align-items-center text-light">
+                    <div class="text-uppercase title-size">Start Bootstrap</div>
                     <div class="d-flex justify-content-end align-items-center">
                         <ol class="list-unstyled d-flex justify-content-end">
                             <li><a class="pt-3 text-light text-decoration-none d-none d-lg-block" href="#">Portfolio</a></li>
@@ -33,65 +33,67 @@
         <div class="container-fluid bg-info size">
             <div class="pt-3 container-sm d-flex align-items-center flex-column mb-3 text-light fw-bold">
                 <!-- Immagine  -->
-                <img id="avatar" src="img/avatar.svg" alt="">
+                <img id="avatar" class="mb-3" src="img/avatar.svg" alt="">
                 <!-- Testo immagine  -->
-                <div class="text-uppercase fs-1 text">Start Bootstrap</div>
+                <div class="text-uppercase fs-1 text pb-3">Start Bootstrap</div>
                 <!-- -----STELLA---- -->
-                <div class="d-flex align-items-center mb-3">
+                <div class="d-flex pb-3">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
-                      <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
-                    </svg>
-                    <div><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
-                      <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                    </svg></div>
+                        <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
+                      </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                        <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                      </svg>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
-                      <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
-                    </svg>
+                        <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
+                      </svg>
                 </div>
                 <!-- DESCRIZIONE -->
-                <div class="bp-2 text-uppercase size">
+                <div class="bp-2 text-uppercase size pb-3">
                      <div>Graphic Artist - Web Designer - Illustrator</div>
                 </div>
             </div>
         </div>
         <!-- Portfolio -->
-        <div class="container-sm d-flex align-items-center flex-column mb-3 fw-bold">
+        <div class="container-fluid">
+            <div class="container-sm d-flex align-items-center flex-column mb-3 fw-bold">
 
-            <!-- -----STELLA---- -->
-            <div class="text-uppercase fs-1 text">Portfolio</div>
-            <div class="d-flex align-items-end mb-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
-                  </svg>
-                <div><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
-                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                  </svg></div>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
-                  </svg>
+                <!-- -----STELLA---- -->
+                <div class="text-uppercase fs-1 text">Portfolio</div>
+                <div class="d-flex align-items-end mb-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
+                    </svg>
+                    <div><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                        <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                    </svg></div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
+                    </svg>
+                </div>
+                <!-- IMMAGINI  -->
+                <div class="pb-3 d-flex justify-content-center flex-wrap">
+                    <div class="img-only mt-3">
+                        <img class="img-fluid round" src="img/cabin.png" alt="...">
+                    </div>
+                    <div class="img-only mt-3">
+                        <img class="img-fluid round" src="img/cake.png" alt="...">
+                    </div>
+                    <div class="img-only mt-3">
+                        <img class="img-fluid round" src="img/circus.png" alt="...">
+                    </div>
+                    <div class="img-only mt-3">
+                        <img class="img-fluid round" src="img/game.png" alt="...">
+                    </div>
+                    <div class="img-only mt-3">
+                        <img class="img-fluid round" src="img/safe.png" alt="...">
+                    </div>
+                    <div class="img-only mt-3">
+                        <img class="img-fluid round" src="img/submarine.png" alt="...">
+                    </div>
+                </div>
             </div>
-            <!-- IMMAGINI  -->
-            <div class="pb-3 d-flex justify-content-center flex-wrap">
-                <div class="img-only mt-3">
-                    <img class="img-fluid round" src="img/cabin.png" alt="...">
-                </div>
-                <div class="img-only mt-3">
-                    <img class="img-fluid round" src="img/cake.png" alt="...">
-                </div>
-                <div class="img-only mt-3">
-                    <img class="img-fluid round" src="img/circus.png" alt="...">
-                </div>
-                <div class="img-only mt-3">
-                    <img class="img-fluid round" src="img/game.png" alt="...">
-                </div>
-                <div class="img-only mt-3">
-                    <img class="img-fluid round" src="img/safe.png" alt="...">
-                </div>
-                <div class="img-only mt-3">
-                    <img class="img-fluid round" src="img/submarine.png" alt="...">
-                </div>
-            </div>
-        </div>
+        </div>    
         <!-- ABOUT  -->
         <div class="container-fluid bg-info">
             <div class="pt-3 container-sm d-flex align-items-center flex-column mb-3 text-light fw-bold">
@@ -107,8 +109,8 @@
                     <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
                   </svg>
                 </div>
-                <div class="d-md-flex justify-content-center pb-2">
-                    <p class="pt-2 parted">Freelancer is a free boostrap them created by Start Bootstrap.The download includes the complete source files including HTML, CSS,and Javascript as well as optional LESS styleesheets for east customization.</p>
+                <div class="d-md-flex justify-content-evenly pb-2">
+                    <p class="pt-2 parted">Freelancer is a free boostrap them created by Start Bootstrap. The download includes the complete source files including HTML, CSS,and Javascript as well as optional LESS styleesheets for east customization.</p>
                     <p class="pt-2 parted">Wheter you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to shar your projects, this template is the perfect starting point!</p>
                 </div>
             </div>
