--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <!-- START BOOTSTRAP -->
-        <div class="container-fluid bg-info size">
+        <div class="container-fluid greenback size">
             <div class="pt-3 container-sm d-flex align-items-center flex-column mb-3 text-light fw-bold">
                 <!-- Immagine  -->
                 <img id="avatar" class="mb-3" src="img/avatar.svg" alt="">
@@ -95,8 +95,8 @@
             </div>
         </div>    
         <!-- ABOUT  -->
-        <div class="container-fluid bg-info">
-            <div class="pt-3 container-sm d-flex align-items-center flex-column mb-3 text-light fw-bold">
+        <div class="container-fluid greenback">
+            <div class="py-3 container-sm d-flex align-items-center flex-column mb-3 text-light fw-bold">
                 <div class="text-uppercase fs-1 text">About</div>
                 <div class="d-flex align-items-end mb-3">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
@@ -113,6 +113,14 @@
                     <p class="pt-2 parted">Freelancer is a free boostrap them created by Start Bootstrap. The download includes the complete source files including HTML, CSS,and Javascript as well as optional LESS styleesheets for east customization.</p>
                     <p class="pt-2 parted">Wheter you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to shar your projects, this template is the perfect starting point!</p>
                 </div>
+
+                <button type="button" class="btn btn-outline-light">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-down" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M3.5 10a.5.5 0 0 1-.5-.5v-8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 0 0 1h2A1.5 1.5 0 0 0 14 9.5v-8A1.5 1.5 0 0 0 12.5 0h-9A1.5 1.5 0 0 0 2 1.5v8A1.5 1.5 0 0 0 3.5 11h2a.5.5 0 0 0 0-1h-2z"/>
+                        <path fill-rule="evenodd" d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708l3 3z"/>
+                      </svg> Download
+                </button>
+
             </div>
         </div>
         <!-- CONTACT SECTION  -->
